proj1/testing/error/permutationsConf.inp
* I II AA
Hello World